Prevent horizontal scrolling on mobile due to background blurs

--- a/src/assets/styles/tailwind.css
+++ b/src/assets/styles/tailwind.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    @apply overflow-x-hidden;
+  }
+  body {
+    @apply overflow-x-hidden;
+  }
+}
+
 @layer utilities {
   .bg-page {
     background-color: var(--aw-color-bg-page);
